layout bug fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
   }
 }
 
-body {
+html, body {
   width: 100%;
   height: 100vh;
   padding: 0;
